--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,9 +104,10 @@
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
         android:gravity="center"
-        android:paddingBottom="30dp">
+        android:layout_marginBottom="60dp"
+        android:paddingBottom="20dp">
 
-        <!-- Info Text -->
+    <!-- Info Text -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
