--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -65,7 +65,7 @@
                 android:layout_height="wrap_content"
                 android:text="Loukas Koutsouridis"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:layout_gravity="center"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="25dp" />
@@ -135,7 +135,7 @@
                 android:layout_width="280dp"
                 android:layout_height="45dp"
                 android:background="@drawable/button_background_transparent"
-                android:text="Privacy Policy / Datenschutz"
+                android:text="Privacy Policy"
                 android:textColor="@color/white"
                 android:textSize="14sp"
                 android:layout_marginBottom="10dp" />
@@ -146,7 +146,7 @@
                 android:layout_width="280dp"
                 android:layout_height="45dp"
                 android:background="@drawable/button_background_transparent"
-                android:text="Disclaimer / Haftungsausschluss"
+                android:text="Disclaimer"
                 android:textColor="@color/white"
                 android:textSize="14sp"
                 android:layout_marginBottom="10dp" />
